--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "^2.2.0",
     "angularfire2": "5.0.0-rc.4",
+    "cordova-android": "^8.1.0",
+    "cordova-ios": "^5.1.1",
+    "cordova-sqlite-storage": "^5.0.0",
     "firebase": "5.0.3",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
@@ -35,10 +38,28 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.4",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "typescript": "2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
-    "plugins": {}
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
+    },
+    "platforms": [
+      "ios",
+      "android"
+    ]
   }
 }
