--- a/package.json
+++ b/package.json
@@ -18,19 +18,27 @@
     "@angular/core": "5.2.11",
     "@angular/fire": "^5.0.2",
     "@angular/forms": "5.2.11",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^4.20.0",
     "@ionic-native/core": "4.20.0",
+    "@ionic-native/firebase": "^5.24.0",
+    "@ionic-native/push": "^4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "^2.2.0",
     "angularfire2": "5.0.0-rc.4",
     "cordova-android": "^8.1.0",
-    "cordova-ios": "^5.1.1",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-firebase-lib": "^3.3.0",
     "cordova-sqlite-storage": "^5.0.0",
+    "cordova-support-google-services": "^1.3.2",
     "firebase": "5.0.3",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
+    "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "^2.3.0",
     "rxjs": "6.0.0",
     "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
@@ -55,10 +63,18 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-firebase-lib": {},
+      "phonegap-plugin-push": {
+        "SENDER_ID": "587340249995",
+        "ANDROID_SUPPORT_V13_VERSION": "27.+",
+        "FCM_VERSION": "17.0.+"
+      },
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
-      "ios",
       "android"
     ]
   }
